[gd_scene load_steps=7 format=3 uid="uid://dsv7l18p3a8uw"]

[ext_resource type="Texture2D" uid="uid://bg27k5sblx533" path="res://art/objects/Door_01.png" id="1_hdo2b"]
[ext_resource type="Script" uid="uid://brf7jejk26p1n" path="res://interactables/key_door/key_door.gd" id="1_q5ler"]

[sub_resource type="Gradient" id="Gradient_hdo2b"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_q5ler"]
gradient = SubResource("Gradient_hdo2b")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hdo2b"]
size = Vector2(70, 130)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_q5ler"]
properties/0/path = NodePath(".:is_door_open")
properties/0/spawn = true
properties/0/replication_mode = 2

[node name="KeyDoor" type="Node2D" node_paths=PackedStringArray("door_open", "door_closed")]
script = ExtResource("1_q5ler")
door_open = NodePath("DoorOpen")
door_closed = NodePath("DoorClosed")

[node name="DoorClosed" type="Sprite2D" parent="."]
z_index = -100
position = Vector2(0, -70)
scale = Vector2(0.55, 0.55)
texture = ExtResource("1_hdo2b")

[node name="DoorOpen" type="Sprite2D" parent="."]
visible = false
z_index = -100
position = Vector2(1.90735e-06, -65)
scale = Vector2(0.273438, 130)
texture = SubResource("GradientTexture1D_q5ler")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -65)
shape = SubResource("RectangleShape2D_hdo2b")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_q5ler")

[connection signal="area_entered" from="Area2D" to="." method="open_door"]
[connection signal="delta_synchronized" from="MultiplayerSynchronizer" to="." method="_on_multiplayer_synchronizer_delta_synchronized"]
